# news

./: .gitignore  Makefile  README.md  compose.prod.yml  compose.yml
api/: pyproject.toml
api/app/: main.py
api/app/routers/: gemini.py
api/app/schemas/: gemini.py
api/app/services/: apitube.py  gemini.py  prompt.py  scrape.py  youtube.py
backend/: .env.example  Makefile
backend/app/Http/Controllers/: AuthController.php  ChatController.php  MessageController.php
backend/app/Models/: Chat.php  Message.php  User.php
backend/config/: cors.php
backend/database/factories/: ChatFactory.php  MessageFactory.php
backend/database/migrations/: 2025_12_15_024738_create_chats_table.php
backend/routes/: api.php
backend/tests/Feature/: ChatTest.php  MessageTest.php
docker/api/: .extra_bashrc  Dockerfile
docker/backend/: Dockerfile
docker/db/: .env.sample
docker/frontend/: .extra_bashrc  Dockerfile  Dockerfile.prod
docker/nginx/: nginx.conf  nginx.prod.conf
frontend/: .env.example  .gitignore  next.config.js
frontend/src/components/: vrmViewer.tsx
frontend/src/news/components/: Chat.tsx  HamburgerContent.tsx  HamburgerMenu.tsx  Input.tsx  Loading.tsx  Login.tsx  NewChat.tsx  SendMessage.tsx  Wrapper.tsx
frontend/src/news/utils/: auth.ts  common.ts
frontend/src/pages/: _app.tsx  index.tsx  index.tsx.old  index.tsx.old2
frontend/src/pages/auth/: callback.tsx  login.tsx
frontend/src/pages/chats/: [chatId].tsx
